Mi segundo push

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <h1>Hola mundo</h1>
-<div id="contenido"> JKASDKASD</div>
+<div id="contenido"> Devops</div>
 <!-- <img src="" alt="" style="height: 300px ; width: 300px; "  > -->
 <!-- <script src="fetch1.js"></script> -->
 <script src="fetch5.js"></script>
